[project]
name = "gui-mayan-sunset"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrian",email = "adrianconde128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "tkdesigner (>=1.0.7,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gui_mayan_sunset", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
